# cppfem

./: .gitignore  CMakeLists.txt  preprocessDefine.h
Commands/: CMakeLists.txt  main.cpp
Commands/control/: CMakeLists.txt  ControlProgram.cpp  FEMProgram.cpp  FEMProgram.h  MainProgram.cpp  Timer.cpp  Timer.h  forwarddeclaration.h  globals.cpp  preprocessDefine.h
Commands/control/commands/: CMakeLists.txt  GenericCommand.cpp  GenericCommand.h  InputParser.cpp  InputParser.h  quitCommands.cpp  quitCommands.h
Commands/control/commands/macroCMD/: CMakeLists.txt  CommandHistory.cpp  CommandHistory.h  CommandTemplate.cpp  CommandTemplate.h  ComputeConditionNumber.cpp  ComputeConditionNumber.h  ComputeEigenValues.cpp  ComputeEigenValues.h  Do.cpp  Do.h  Newton.cpp  Newton.h  OpenFiles.cpp  OpenFiles.h  Output.cpp  Output.h  OutputPrecision.cpp  OutputPrecision.h  PrintPropFunction.cpp  PrintPropFunction.h  PrintSolution.cpp  PrintSolution.h  PrintSpMat.cpp  PrintSpMat.h  Processfiles.cpp  Processfiles.h  PropFunction.cpp  PropFunction.h  PropNames.cpp  PropNames.h  ReInput.cpp  ReInput.h  ResetSolution.cpp  ResetSolution.h  RunFile.cpp  RunFile.h  SetDt.cpp  SetDt.h  SetUpSparseMatrix.cpp  (+20 more)
Commands/control/commands/mathCMD/: CMakeLists.txt  CommandTemplate.cpp  CommandTemplate.h  list.cpp  list.h  mathCommandInclude.h  process.cpp  process.h
Commands/control/commands/meshCMD/: AddFiniteElement.cpp  AddFiniteElement.h  AddGeometryElement.cpp  AddGeometryElement.h  AddVertex.cpp  AddVertex.h  Block.cpp  Block.h  CMakeLists.txt  CommandTemplate.cpp  CommandTemplate.h  SetBoundaryConditions.cpp  SetBoundaryConditions.h  SetDegreeOfFreedom.cpp  SetDegreeOfFreedom.h  SetMaterials.cpp  SetMaterials.h  inplanebc.cpp  inplanebc.h  inplaneload.cpp  inplaneload.h  linkDofs.cpp  linkDofs.h  meshCommandInclude.h  singleBC.cpp  singleBC.h  singleLoad.cpp  singleLoad.h
Commands/control/commands/plotCMD/: CMakeLists.txt  CommandTemplate.cpp  CommandTemplate.h  paraview.cpp  paraview.h  plotCommandInclude.h  plotInteract.cpp  plotInteract.h  plotSolution.cpp  plotSolution.h  plotmesh.cpp  plotmesh.h
FEMSource/: CMakeLists.txt  forwarddeclaration.h  mainlib.cpp  preprocessDefine.h
FEMSource/control/: CMakeLists.txt  FEMExceptions.cpp  HandlingStructs.cpp  HandlingStructs.h  OutputHandler.cpp  OutputHandler.h  stringCommandHandler.cpp  stringCommandHandler.h
FEMSource/elementFormulations/: CMakeLists.txt  ElementFormulation201.cpp  ElementFormulation201.h  ElementFormulation2DGreenBeam.cpp  ElementFormulation2DGreenBeam.h  FiniteRotation2DTimoshenko.cpp  FiniteRotation2DTimoshenko.h  GenericElementFormulation.cpp  GenericElementFormulation.h  LSFEMBernoulli.cpp  LSFEMBernoulli.h
FEMSource/elementFormulations/backup/: Element201.hpp  ElementControl.hpp  ElementLibrary.hpp
FEMSource/equations/: CMakeLists.txt  DegreeOfFreedom.cpp  DegreeOfFreedom.h  DofStatus.h  EquationHandler.cpp  EquationHandler.h  GenericNodes.cpp  GenericNodes.h  GeometryData.cpp  GeometryData.h  NodeSet.cpp  NodeSet.h  NodeSetStorage.cpp  NodeSetStorage.h  Nodetypes.cpp
FEMSource/equations/backup/: DofHandler.h
FEMSource/filehandling/: CMakeLists.txt  filehandling.cpp  filehandling.h
FEMSource/finiteElements/: CMakeLists.txt  ElementList.cpp  ElementList.h  ElementTypes.cpp  ElementTypes.h  GenericFiniteElement.cpp  GenericFiniteElement.h  LinearLineElement.cpp  LinearLineElement.h  LinearTriangleElement.cpp  LinearTriangleElement.h  QuadrilateralNodal.cpp  QuadrilateralNodal.h
FEMSource/geometry/: CMakeLists.txt  Edge.cpp  GenericGeometryElement.cpp  GenericGeometryElement.h  GeometryTypes.cpp  GeometryTypes.h  LinearBrick.cpp  LinearBrick.h  LinearEdge.cpp  LinearEdge.h  LinearQuadrilateral.cpp  LinearQuadrilateral.h  LinearTriangle.cpp  LinearTriangle.h  Vertex.cpp  Vertex.h
FEMSource/geometry/geoelements/: GeoElement.h  GeoElementLine.h
FEMSource/loads/: CMakeLists.txt  DofLoad.cpp  DofLoad.h  GenericLoad.cpp  GenericLoad.h  LoadList.cpp  LoadList.h  PropfunctionHandler.cpp  PropfunctionHandler.h  Timefunction.cpp  Timefunction.h
FEMSource/materials/: CMakeLists.txt  GenericMaterialFormulation.cpp  GenericMaterialFormulation.h  Material.cpp  Material.h  MaterialFormulation1.cpp  MaterialFormulation1.h  MaterialList.cpp  MaterialList.h
FEMSource/math/: CMakeLists.txt  Plane.cpp  Plane.h  Userconstants.cpp  Userconstants.h
FEMSource/plot/: CMakeLists.txt  vtkPlotClass.cpp  vtkPlotClassBase.cpp  vtkplotClass.h  vtkplotClassBase.h
FEMSource/pointercollection/: CMakeLists.txt  pointercollection.cpp  pointercollection.h
FEMSource/pointercollection/backup/: pointercollectionbase.hpp
FEMSource/shapefunctions/: CMakeLists.txt  GaussPoints.cpp  GaussPoints.h  KernelShape.cpp  KernelShape.h  LagrangeShape.cpp  Legendre.cpp  Legendre.h  Lobatto.h
FEMSource/solver/: CMakeLists.txt  EigenPardisoLDLT.cpp  EigenPardisoLDLT.h  EigenPardisoLLT.cpp  EigenPardisoLLT.h  EigenPardisoLU.cpp  EigenPardisoLU.h  EigenSimplicialLDLT.cpp  EigenSimplicialLDLT.h  EigenSimplicialLLT.cpp  EigenSimplicialLLT.h  EigenSparseLU.cpp  EigenSparseLU.h  EigenSparseQR.cpp  EigenSparseQR.h  GenericSolutionState.cpp  GenericSolutionState.h  GenericSolver.cpp  GenericSolver.h  SolutionTypes.cpp  SolutionTypes.h  SolverTypes.cpp  SolverTypes.h  StaticSolutionState.cpp  StaticSolutionState.h  TransientSolutionNewmark.cpp  TransientSolutionNewmark.h
FEMSource/stringoperations/: CMakeLists.txt  stringoperations.cpp  stringoperations.h
FEMSource/wrapper/: CMakeLists.txt  FEMProgExtBase.cpp  FEMProgExtBase.h  FEMProgExtDoubleInt.cpp  FEMProgExtDoubleInt.h
MainProgram/: CMakeLists.txt  cmake.inc  main.cpp
MainProgram/include/: MainProgram.h  MainProgramBase.h
MainProgram/src/: MainProgram.cpp  MainProgramBase.cpp
